--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,10 @@ bottom: 500px;
 line-height: 50px;
 font-family: Arial;
 }
+.use {
+	font-family: Arial;
+	text-align: center;
+	position: relative;
+	bottom: 200 px;
+}
+	
