--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ margin: 0;
 .header {
 font-weight: bold;
 font-family: Arial;
-color: seagreen;
+color: #196039;
 }
 .linkindex {
 text-align: left;
