--- a/css/style.css
+++ b/css/style.css
@@ -102,5 +102,7 @@ font-family: Arial;
 text-align: center;
 position: relative;
 bottom: 200 px;
+font-size: 18px;
+background-color: rgba(239, 223, 182, 0.8);
 }
 	
